// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it top-aligns children by default 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  width: 100%;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
  padding-left: 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
}

.c0 {
  margin-left: 0px;
}

.c3 {
  min-width: 0;
}

.c2:first-child > .c5 {
  padding-top: 0;
}

.c7 {
  width: 100%;
  min-width: 10px;
  height: 100px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c9 {
  width: 100%;
  min-width: 10px;
  height: 40px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c10 {
  width: 100%;
  min-width: 10px;
  height: 70px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    margin-left: 0px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    margin-left: 0px;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    margin-left: 0px;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    margin-left: 0px;
  }
}

<div>
  <div
    class="c0 c1"
    data-id="my-cols"
    display="flex,flex,flex,flex,flex"
  >
    <div
      class="c2 c3 c4"
      data-id="column"
      width="full"
    >
      <div
        class="c5 c6"
        display="block,block,block,block,block"
        height="full"
      >
        <div
          class="c7 c8"
          data-id="placeholder"
          display="flex"
          height="100px"
          overflow="hidden"
          shape="rectangle"
          width="100%"
        >
          <svg
            style="width: 100%; height: 100%; position: absolute;"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="0"
              x2="100%"
              y1="0"
              y2="100%"
            />
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="100%"
              x2="0"
              y1="0"
              y2="100%"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c2 c3 c4"
      data-id="column"
      width="full"
    >
      <div
        class="c5 c6"
        display="block,block,block,block,block"
        height="full"
      >
        <div
          class="c9 c8"
          data-id="placeholder"
          display="flex"
          height="40px"
          overflow="hidden"
          shape="rectangle"
          width="100%"
        >
          <svg
            style="width: 100%; height: 100%; position: absolute;"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="0"
              x2="100%"
              y1="0"
              y2="100%"
            />
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="100%"
              x2="0"
              y1="0"
              y2="100%"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c2 c3 c4"
      data-id="column"
      width="full"
    >
      <div
        class="c5 c6"
        display="block,block,block,block,block"
        height="full"
      >
        <div
          class="c10 c8"
          data-id="placeholder"
          display="flex"
          height="70px"
          overflow="hidden"
          shape="rectangle"
          width="100%"
        >
          <svg
            style="width: 100%; height: 100%; position: absolute;"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="0"
              x2="100%"
              y1="0"
              y2="100%"
            />
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="100%"
              x2="0"
              y1="0"
              y2="100%"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it vertically aligns children bottom if alignY is bottom 1`] = `
.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  width: 100%;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
  padding-left: 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  margin-left: 0px;
}

.c3 {
  min-width: 0;
}

.c2:first-child > .c5 {
  padding-top: 0;
}

.c7 {
  width: 100%;
  min-width: 10px;
  height: 100px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c9 {
  width: 100%;
  min-width: 10px;
  height: 40px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c10 {
  width: 100%;
  min-width: 10px;
  height: 70px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    margin-left: 0px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    margin-left: 0px;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    margin-left: 0px;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    margin-left: 0px;
  }
}

<div>
  <div
    class="c0 c1"
    data-id="columns"
    display="flex,flex,flex,flex,flex"
  >
    <div
      class="c2 c3 c4"
      data-id="column"
      width="full"
    >
      <div
        class="c5 c6"
        display="block,block,block,block,block"
        height="full"
      >
        <div
          class="c7 c8"
          data-id="placeholder"
          display="flex"
          height="100px"
          overflow="hidden"
          shape="rectangle"
          width="100%"
        >
          <svg
            style="width: 100%; height: 100%; position: absolute;"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="0"
              x2="100%"
              y1="0"
              y2="100%"
            />
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="100%"
              x2="0"
              y1="0"
              y2="100%"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c2 c3 c4"
      data-id="column"
      width="full"
    >
      <div
        class="c5 c6"
        display="block,block,block,block,block"
        height="full"
      >
        <div
          class="c9 c8"
          data-id="placeholder"
          display="flex"
          height="40px"
          overflow="hidden"
          shape="rectangle"
          width="100%"
        >
          <svg
            style="width: 100%; height: 100%; position: absolute;"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="0"
              x2="100%"
              y1="0"
              y2="100%"
            />
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="100%"
              x2="0"
              y1="0"
              y2="100%"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c2 c3 c4"
      data-id="column"
      width="full"
    >
      <div
        class="c5 c6"
        display="block,block,block,block,block"
        height="full"
      >
        <div
          class="c10 c8"
          data-id="placeholder"
          display="flex"
          height="70px"
          overflow="hidden"
          shape="rectangle"
          width="100%"
        >
          <svg
            style="width: 100%; height: 100%; position: absolute;"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="0"
              x2="100%"
              y1="0"
              y2="100%"
            />
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="100%"
              x2="0"
              y1="0"
              y2="100%"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it vertically aligns children middle if alignY is center 1`] = `
.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  width: 100%;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
  padding-left: 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  margin-left: 0px;
}

.c3 {
  min-width: 0;
}

.c2:first-child > .c5 {
  padding-top: 0;
}

.c7 {
  width: 100%;
  min-width: 10px;
  height: 100px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c9 {
  width: 100%;
  min-width: 10px;
  height: 40px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c10 {
  width: 100%;
  min-width: 10px;
  height: 70px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    padding-left: 0;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    margin-left: 0px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    margin-left: 0px;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    margin-left: 0px;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    margin-left: 0px;
  }
}

<div>
  <div
    class="c0 c1"
    data-id="columns"
    display="flex,flex,flex,flex,flex"
  >
    <div
      class="c2 c3 c4"
      data-id="column"
      width="full"
    >
      <div
        class="c5 c6"
        display="block,block,block,block,block"
        height="full"
      >
        <div
          class="c7 c8"
          data-id="placeholder"
          display="flex"
          height="100px"
          overflow="hidden"
          shape="rectangle"
          width="100%"
        >
          <svg
            style="width: 100%; height: 100%; position: absolute;"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="0"
              x2="100%"
              y1="0"
              y2="100%"
            />
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="100%"
              x2="0"
              y1="0"
              y2="100%"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c2 c3 c4"
      data-id="column"
      width="full"
    >
      <div
        class="c5 c6"
        display="block,block,block,block,block"
        height="full"
      >
        <div
          class="c9 c8"
          data-id="placeholder"
          display="flex"
          height="40px"
          overflow="hidden"
          shape="rectangle"
          width="100%"
        >
          <svg
            style="width: 100%; height: 100%; position: absolute;"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="0"
              x2="100%"
              y1="0"
              y2="100%"
            />
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="100%"
              x2="0"
              y1="0"
              y2="100%"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c2 c3 c4"
      data-id="column"
      width="full"
    >
      <div
        class="c5 c6"
        display="block,block,block,block,block"
        height="full"
      >
        <div
          class="c10 c8"
          data-id="placeholder"
          display="flex"
          height="70px"
          overflow="hidden"
          shape="rectangle"
          width="100%"
        >
          <svg
            style="width: 100%; height: 100%; position: absolute;"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="0"
              x2="100%"
              y1="0"
              y2="100%"
            />
            <line
              style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
              x1="100%"
              x2="0"
              y1="0"
              y2="100%"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
